＊added some more kaomoji & fixed button text color on ios devices

--- a/KaomojiProject.scss
+++ b/KaomojiProject.scss
@@ -252,6 +252,7 @@ body::-webkit-scrollbar {
     white-space: nowrap;
     font-size: 16px;
     font-weight: 400;
+    color: #000000;
     border: 1px solid #F4AB08;
     border-radius: 16px;
     background-color: #FFFFFF;
@@ -308,6 +309,7 @@ body::-webkit-scrollbar {
     white-space: nowrap;
     font-size: 16px;
     font-weight: 400;
+    color: #000000;
     border: 1px solid #CFCDE5;
     border-radius: 16px;
     background-color: #FFFFFF;
